egonlang-core/res/examples/invalid/list_expr_mismatch_item_types_with_identifiers.eg
[1, a];

// out: TypeError: mismatched types: expected type `number` but received `identifier`